Fix reserve button spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -348,10 +348,16 @@ input[type="range"]::-moz-range-thumb {
 /* ROOM MODAL */
 
 .room-modal-details {
-  /* justify-self: flex-start; */
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.modal-bottom {
+  display: flex;
+  justify-content: center;
+  max-height: 20%;
+  width: 80%;
 }
 
 .modal-description, .modal-cost-date {
@@ -369,7 +375,6 @@ input[type="range"]::-moz-range-thumb {
 
 .modal-imgs {
   overflow-x: auto;
-  /* max-width: 80%; */
   max-height: 100%;
   display: flex;
 }
@@ -554,7 +559,6 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .no-results-img {
-  /* position: relative; */
   max-height: 90%;  
   max-width: 90%;
 } 
@@ -688,9 +692,3 @@ button:hover {
     margin: 1%;
   }
 }
-/* 
-@media screen and (max-height: 650px) {
-  .img-slide-wrapper {
-    max-height: 40%;
-  }
-} */
